--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogoteca</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
@@ -24,6 +25,8 @@
         
             {% block content %} {% endblock %}
 
+            <script src="{{ url_for('static', filename='jquery.js') }}"></script>
+            <script src="{{ url_for('static', filename='script.js') }}"></script>
         </div>
     </div>
 </body>
