--- a/templates/editar.html
+++ b/templates/editar.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-      <form class="formularioJogo" method="POST" action="{{ url_for('criar') }}" enctype="multipart/form-data">
+      <form class="formularioJogo" method="POST" action="{{ url_for('atualizar') }}" enctype="multipart/form-data">
+
         <figure class="img-thumbnail col-md-4 formularioImagem">
-          <img class="img-fluid" src="{{ url_for('image', filename='capa_padrao.jpg')}}">
+          <img class="img-fluid" src="{{ url_for('image', filename=capa_jogo) }}">
           <figcaption>
             <label class="fileContainer">
               Mudar Capa
@@ -10,7 +11,9 @@
             </label>
           </figcaption>
         </figure>
+
         <fieldset>
+          <input type="hidden" name="id" value="{{ id }}">
           {{ form.csrf_token() }}
           <div class="form-group inputBox">
             {{ form.nome.label(class="form-label") }}
@@ -26,10 +29,10 @@
           </div>
           <div class="form-group buttons">
             {{ form.salvar(class="btn btn-primary btn-salvar") }}
+            <a class="btn btn-danger" href="{{ url_for('index') }}">Voltar</a>
           </div>
         </fieldset>
       </form>
-      <a class="btn btn-danger" href="{{ url_for('index') }}">Voltar</a>
     </div>
 </body>
 </html>
